wsl/cluster/services/portfolio/deployment-mobile-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-dev-server
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: mobile-dev-server
  template:
    metadata:
      labels:
        app: mobile-dev-server
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:1.25-alpine
        name: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
      volumes:
      - configMap:
          name: dev-mobile-html-config
        name: html-volume
