wsl/cluster/services/portfolio/deployment-mobile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '9'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mobile-server","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mobile-server"}},"template":{"metadata":{"labels":{"app":"mobile-server"}},"spec":{"containers":[{"image":"nginxinc/nginx-unprivileged:1.25-alpine","name":"nginx","ports":[{"containerPort":5599}],"volumeMounts":[{"mountPath":"/usr/share/nginx/html","name":"html-volume"}] [...]

      '
  name: mobile-server
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mobile-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-06-10T17:41:16-03:00'
      creationTimestamp: null
      labels:
        app: mobile-server
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:1.25-alpine
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 5599
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: mobile-html-config
        name: html-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: '2026-06-10T19:39:53Z'
    lastUpdateTime: '2026-06-10T19:39:53Z'
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: 'True'
    type: Available
  - lastTransitionTime: '2026-06-10T19:39:52Z'
    lastUpdateTime: '2026-06-10T20:41:17Z'
    message: ReplicaSet "mobile-server-55cf99d459" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: 'True'
    type: Progressing
  observedGeneration: 9
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
