wsl/cluster/services/portfolio/service-dev-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"dev-server-service","namespace":"default"},"spec":{"ports":[{"port":5500,"targetPort":5500}],"selector":{"app":"dev-server"}}}
  name: dev-server-service
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5500
    protocol: TCP
    targetPort: 5500
  selector:
    app: dev-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
