wsl/cluster/services/portfolio/service-mobile.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mobile-server-service","namespace":"default"},"spec":{"ports":[{"port":5599,"targetPort":5599}],"selector":{"app":"mobile-server"}}}
  name: mobile-server-service
  namespace: default
spec:
  clusterIP: 10.96.226.198
  clusterIPs:
  - 10.96.226.198
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5599
    protocol: TCP
    targetPort: 8080
  selector:
    app: mobile-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
