wsl/cluster/services/portfolio/ingress-deniso.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: denisdeoliveira
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: denisdeoliveira.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: www.denisdeoliveira.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
